[metadata]
name = mini–cryptography
version = 0.0.1
author = Antanas Bendoraitis
author_email = antanasbendoraitis7@gmail.com
description = Package that contains ECDSA arithmetics and Merkle tree root calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antanasbendoraitis/mini-cryptography.git
project_urls =
    Bug Tracker = https://github.com/Duomenu-saugojimo-sistema/Duomenu-saugojimo-sistema-paremta-bloku-grandines-technologija/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    tinyec

[options.packages.find]
where = src